fix(design): reduce excessive whitespace around h2 and h3 headings

--- a/src/css/content/markdown.scss
+++ b/src/css/content/markdown.scss
@@ -1,6 +1,6 @@
 body .markdown {
   position: relative;
-  --ifm-h2-vertical-rhythm-top: 1.8;
+  --ifm-h2-vertical-rhythm-top: 1.0;
   --ifm-list-margin: 0.25em;
 }
 
@@ -31,7 +31,7 @@ body .markdown {
 }
 
 .markdown > h2 {
-  margin-top: 2em !important;
+  margin-top: 1.4em !important;
   &:target::before {
     top: -15px !important;
   }
@@ -40,14 +40,14 @@ body .markdown {
 .markdown > *:not(header) + h2 {
   line-height: 1.2em;
   border-top: 1px solid #f1f1f1;
-  padding-top: 1.8em;
+  padding-top: 1em;
   &:target::before {
     top: 35px !important;
   }
 }
 
 .markdown h3 {
-  margin-top: 2.8em;
+  margin-top: 1.6em;
   line-height: 1.2em;
 }
 
@@ -193,7 +193,7 @@ blockquote.active-section::before {
 }
 
 .markdown h2:not(:first-of-type) {
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 .markdown summary > * {
@@ -205,7 +205,7 @@ blockquote.active-section::before {
 }
 
 .markdown h2 + h3 {
-  margin-top: 1.5em !important;
+  margin-top: 0.8em !important;
 }
 
 h3.active-section::before {
